[package]
name = "simple-blockchain"
version = "0.1.0"
author = "koxno"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.9"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10.2"
indicatif = "0.16.2"
instant = "0.1.12"